--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,1 +1,39 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="css/index.css">
+<title>module2-solution</title>
+</head>
+<body>
+	<h1>module2-solution</h1>
 
+	<div class="row">
+		<div class="col col-lg-4 col-md-6 col-sm-12">
+			<div class="col-container">
+				<div class="section-title" id="section-title1">
+					Chicken
+				</div>
+				sdfsdfsdfsdfsdhfsjdnjkvjvshiofsdofjsdfsdfsdfsdfsdhfsjdnjkvjvshiofsdofjsdfsdfsdfsdfsdhfsjdnjkvjvshiofsdofjsdfsdfsdfsdfsdhfsjdnjkvjvshiofsdofjsdfsdfsdfsdfsdhfsjdnjkvjvshiofsdofjsdfsdfsdfsdfsdhfsjdnjkvjvshiofsdofjsdfsdfsdfsdfsdhfsjdnjkvjvshiofsdofj
+			</div>
+		</div>
+		<div class="col col-lg-4 col-md-6 col-sm-12">
+			<div class="col-container">
+				<div class="section-title" id="section-title2">
+					Beef
+				</div>
+				sdfsdfsdfsdfsdhfsjdnjkvjvshiofsdofjsdfsdfsdfsdfsdhfsjdnjkvjvshiofsdofjsdfsdfsdfsdfsdhfsjdnjkvjvshiofsdofjsdfsdfsdfsdfsdhfsjdnjkvjvshiofsdofjsdfsdfsdfsdfsdhfsjdnjkvjvshiofsdofjsdfsdfsdfsdfsdhfsjdnjkvjvshiofsdofjsdfsdfsdfsdfsdhfsjdnjkvjvshiofsdofj
+			</div>
+		</div>
+		<div class="col col-lg-4 col-md-6 col-sm-12">
+			<div class="col-container">
+			<div class="section-title" id="section-title3">
+					Sushi
+				</div>
+				sdfsdfsdfsdfsdhfsjdnjkvjvshiofsdofjsdfsdfsdfsdfsdhfsjdnjkvjvshiofsdofjsdfsdfsdfsdfsdhfsjdnjkvjvshiofsdofjsdfsdfsdfsdfsdhfsjdnjkvjvshiofsdofjsdfsdfsdfsdfsdhfsjdnjkvjvshiofsdofjsdfsdfsdfsdfsdhfsjdnjkvjvshiofsdofjsdfsdfsdfsdfsdhfsjdnjkvjvshiofsdofj
+			</div>	
+		</div>
+	</div>
+
+</body>
